[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tadpole-seg"
version = "0.2.0"
description = "UNet-based Xenopus tadpole segmentation with area computation (IMG_SIZE=1024), packaged with checkpoint."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "TH BioData Consulting", email = "thbiodata@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
  "torch",
  "segmentation-models-pytorch==0.3.3",
  "albumentations==1.4.18",
  "albucore==0.0.17",
  "opencv-python>=4.10.0",
  "timm==0.9.2",
  "numpy",
  "matplotlib",
]

[project.scripts]
tadpole-seg = "tadpole_seg.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tadpole_seg = ["models/*.pth"]
